add description ad prima box nome in index

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <title>Floatin cards</title>
 </head>
 
-<body>
-    <header class="conteiner">
+<body class="conteiner">
+    <header >
         <h1> MEET OUR TEAM</h1>
+        <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore deserunt, debitis libero nihil culpa similique praesentium, ipsa quam impedit, suscipit sed et autem blanditiis aut reiciendis dolor id ullam vitae.</p>
     </header>
-
+    <mein>
+        <div class="box">marco bianchi</div>
+    </mein>
+    
 </body>
 
 </html>
