fix prima box nome in css

--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
 </head>
 
 <body class="conteiner">
-    <header >
+    <header>
         <h1> MEET OUR TEAM</h1>
-        <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore deserunt, debitis libero nihil culpa similique praesentium, ipsa quam impedit, suscipit sed et autem blanditiis aut reiciendis dolor id ullam vitae.</p>
+        <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore deserunt, debitis libero
+            nihil culpa similique praesentium, ipsa quam impedit, suscipit sed et autem blanditiis aut reiciendis dolor
+            id ullam vitae.</p>
     </header>
-    <mein>
-        <div class="box">marco bianchi</div>
-    </mein>
-    
+    <main class="worker">
+        <div class="box ">
+            <p class="information">marco bianchi</p>
+            <img class="img" src="./img/male1.png" alt="">
+        </div>
+    </main>
+
+
 </body>
 
 </html>
