provato a fixare in css e html

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
             id ullam vitae.</p>
     </header>
     <main class="worker">
-        <div class="box ">
-            <p class="information">marco bianchi</p>
-            <img class="img" src="./img/male1.png" alt="">
+        <div class="box">
+            <img src="./img/male1.png" alt="">
+            <div class="information">Marco rossi </div> 
+                <div class="information">designer</div> 
+                <div class="information">marcobianchi@gmail.com</div>
+            
         </div>
     </main>
-
 
 </body>
 
