fix box in index e css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             id ullam vitae.</p>
     </header>
     <main class="worker">
-        <div class="box">
+        <div class="box clearfix">
             <img src="./img/male1.png" alt="">
             <div class="information">Marco rossi </div> 
                 <div class="information">designer</div> 
