add 3 boxinfo in html

--- a/index.html
+++ b/index.html
@@ -20,12 +20,23 @@
             id ullam vitae.</p>
     </header>
     <main class="worker">
-        <div class="box clearfix">
-            <img src="./img/male1.png" alt="">
-            <div class="information">Marco rossi </div> 
-                <div class="information">designer</div> 
-                <div class="information">marcobianchi@gmail.com</div>
-             
+        <div class="box clearfix left">
+            <img src="./img/male1.png " alt="">
+            <div class="information">Marco rossi </div>
+            <div class="information">designer</div>
+            <div class="information">marcobianchi@gmail.com</div>
+        </div>
+        <div class="box clearfix left">
+            <img src="./img/male2.png" alt="">
+            <div class="information">Marco rossi </div>
+            <div class="information">designer</div>
+            <div class="information">marcobianchi@gmail.com</div>
+        </div>
+        <div class="box clearfix left">
+            <img src="./img/male3.png" alt="">
+            <div class="information">Marco rossi </div>
+            <div class="information">designer</div>
+            <div class="information">marcobianchi@gmail.com</div>
         </div>
     </main>
 
