add space tra box in index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="information">designer</div>
             <div class="information">marcobianchi@gmail.com</div>
         </div>
-        <div class="box clearfix left">
+        <div class="box clearfix left boxcentrale">
             <img src="./img/male2.png" alt="">
             <div class="information">Marco rossi </div>
             <div class="information">designer</div>
