add total info e box tra css e index

--- a/index.html
+++ b/index.html
@@ -21,22 +21,41 @@
     </header>
     <main class="worker">
         <div class="box clearfix left">
-            <img src="./img/male1.png " alt="">
+            <img src="./img/male1.png " alt="Marco rossi">
             <div class="information">Marco rossi </div>
             <div class="information">designer</div>
             <div class="information">marcobianchi@gmail.com</div>
         </div>
         <div class="box clearfix left boxcentrale">
-            <img src="./img/male2.png" alt="">
-            <div class="information">Marco rossi </div>
-            <div class="information">designer</div>
+            <img src="./img/female1.png" alt="Laura rossi">
+            <div class="information">LAURA ROSSI</div>
+            <div class="information">Front-end developer</div>
             <div class="information">marcobianchi@gmail.com</div>
         </div>
         <div class="box clearfix left">
-            <img src="./img/male3.png" alt="">
-            <div class="information">Marco rossi </div>
+            <img src="./img/male2.png" alt="">
+            <div class="information">GIORGIo VERDI </div>
+            <div class="information">Back-end developer</div>
+            <div class="information">giorgioverdi@gmail.com</div>
+        </div>
+
+        <div class="box clearfix left">
+            <img src="./img/male3.png " alt="Marco rossi">
+            <div class="information">MARTA ISPUM </div>
             <div class="information">designer</div>
             <div class="information">marcobianchi@gmail.com</div>
+        </div>
+        <div class="box clearfix left boxcentrale">
+            <img src="./img/female2.png" alt="Laura rossi">
+            <div class="information">ROBERTO LOREM</div>
+            <div class="information">Front-end developer</div>
+            <div class="information">marcobianchi@gmail.com</div>
+        </div>
+        <div class="box clearfix left">
+            <img src="./img/female3.png" alt="">
+            <div class="information">DANIELA AMET</div>
+            <div class="information">Back-end developer</div>
+            <div class="information">giorgioverdi@gmail.com</div>
         </div>
     </main>
 
