fix  font style index e css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Floatin cards</title>
 </head>
@@ -24,38 +24,38 @@
             <img src="./img/male1.png " alt="Marco rossi">
             <div class="information">Marco rossi </div>
             <div class="information">designer</div>
-            <div class="information">marcobianchi@gmail.com</div>
+            <div class="information link">marcobianchi@gmail.com</div>
         </div>
         <div class="box clearfix left boxcentrale">
             <img src="./img/female1.png" alt="Laura rossi">
             <div class="information">LAURA ROSSI</div>
             <div class="information">Front-end developer</div>
-            <div class="information">marcobianchi@gmail.com</div>
+            <div class="information link">marcobianchi@gmail.com</div>
         </div>
         <div class="box clearfix left">
             <img src="./img/male2.png" alt="">
-            <div class="information">GIORGIo VERDI </div>
+            <div class="information">GIORGIO VERDI </div>
             <div class="information">Back-end developer</div>
-            <div class="information">giorgioverdi@gmail.com</div>
+            <div class="information link">giorgioverdi@gmail.com</div>
         </div>
 
         <div class="box clearfix left">
             <img src="./img/male3.png " alt="Marco rossi">
             <div class="information">MARTA ISPUM </div>
             <div class="information">designer</div>
-            <div class="information">marcobianchi@gmail.com</div>
+            <div class="information link">marcobianchi@gmail.com</div>
         </div>
         <div class="box clearfix left boxcentrale">
             <img src="./img/female2.png" alt="Laura rossi">
             <div class="information">ROBERTO LOREM</div>
             <div class="information">Front-end developer</div>
-            <div class="information">marcobianchi@gmail.com</div>
+            <div class="information link">marcobianchi@gmail.com</div>
         </div>
         <div class="box clearfix left">
             <img src="./img/female3.png" alt="">
             <div class="information">DANIELA AMET</div>
             <div class="information">Back-end developer</div>
-            <div class="information">giorgioverdi@gmail.com</div>
+            <div class="information link">giorgioverdi@gmail.com</div>
         </div>
     </main>
 
