add commenti in css e html

--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Floatin cards</title>
 </head>
+<!-- titolo -->
 
 <body class="conteiner">
     <header>
         <h1> MEET OUR TEAM</h1>
+        <!-- fine titolo -->
         <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore deserunt, debitis libero
             nihil culpa similique praesentium, ipsa quam impedit, suscipit sed et autem blanditiis aut reiciendis dolor
             id ullam vitae.</p>
     </header>
+    <!-- box insegnanti -->
     <main class="worker">
         <div class="box clearfix left">
             <img src="./img/male1.png " alt="Marco rossi">
