--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <!-- titolo -->
 
-<body class="conteiner">
+<body class="container">
     <header>
         <h1> MEET OUR TEAM</h1>
         <!-- fine titolo -->
@@ -22,43 +22,45 @@
             id ullam vitae.</p>
     </header>
     <!-- box insegnanti -->
-    <main class="worker">
-        <div class="box clearfix left">
-            <img src="./img/male1.png " alt="Marco rossi">
-            <div class="information">Marco rossi </div>
-            <div class="information">designer</div>
-            <div class="information link">marcobianchi@gmail.com</div>
-        </div>
-        <div class="box clearfix left boxcentrale">
-            <img src="./img/female1.png" alt="Laura rossi">
-            <div class="information">LAURA ROSSI</div>
-            <div class="information">Front-end developer</div>
-            <div class="information link">marcobianchi@gmail.com</div>
-        </div>
-        <div class="box clearfix left">
-            <img src="./img/male2.png" alt="">
-            <div class="information">GIORGIO VERDI </div>
-            <div class="information">Back-end developer</div>
-            <div class="information link">giorgioverdi@gmail.com</div>
-        </div>
+    <main>
+        <div >
+            <div class="box clearfix left">
+                <img src="./img/male1.png " alt="Marco rossi">
+                <div class="information">Marco rossi </div>
+                <div class="information">designer</div>
+                <div class="information link">marcobianchi@gmail.com</div>
+            </div>
+            <div class="box clearfix left boxcentrale">
+                <img src="./img/female1.png" alt="Laura rossi">
+                <div class="information">LAURA ROSSI</div>
+                <div class="information">Front-end developer</div>
+                <div class="information link">marcobianchi@gmail.com</div>
+            </div>
+            <div class="box clearfix left">
+                <img src="./img/male2.png" alt="">
+                <div class="information">GIORGIO VERDI </div>
+                <div class="information">Back-end developer</div>
+                <div class="information link">giorgioverdi@gmail.com</div>
+            </div>
 
-        <div class="box clearfix left">
-            <img src="./img/male3.png " alt="Marco rossi">
-            <div class="information">MARTA ISPUM </div>
-            <div class="information">designer</div>
-            <div class="information link">marcobianchi@gmail.com</div>
-        </div>
-        <div class="box clearfix left boxcentrale">
-            <img src="./img/female2.png" alt="Laura rossi">
-            <div class="information">ROBERTO LOREM</div>
-            <div class="information">Front-end developer</div>
-            <div class="information link">marcobianchi@gmail.com</div>
-        </div>
-        <div class="box clearfix left">
-            <img src="./img/female3.png" alt="">
-            <div class="information">DANIELA AMET</div>
-            <div class="information">Back-end developer</div>
-            <div class="information link">giorgioverdi@gmail.com</div>
+            <div class="box clearfix left">
+                <img src="./img/male3.png " alt="Marco rossi">
+                <div class="information">MARTA ISPUM </div>
+                <div class="information">designer</div>
+                <div class="information link">marcobianchi@gmail.com</div>
+            </div>
+            <div class="box clearfix left boxcentrale">
+                <img src="./img/female2.png" alt="Laura rossi">
+                <div class="information">ROBERTO LOREM</div>
+                <div class="information">Front-end developer</div>
+                <div class="information link">marcobianchi@gmail.com</div>
+            </div>
+            <div class="box clearfix left">
+                <img src="./img/female3.png" alt="">
+                <div class="information">DANIELA AMET</div>
+                <div class="information">Back-end developer</div>
+                <div class="information link">giorgioverdi@gmail.com</div>
+            </div>
         </div>
     </main>
 
